# nxtg-forge

./: .coverage  .dockerignore  .pre-commit-config.yaml  .ruff.toml  =3.5.0  CHANGELOG.md  Dockerfile  GETTING-STARTED.md  IMPLEMENTATION-SUMMARY.md  Makefile  PROTOCOL-VERSIONING.md  PYPI-PUBLICATION.md  README.md  RELEASE-NOTES-2.0.0.md  coverage.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.asif/: NXTG-Forge-Serf-Deploying-AI-Dev-Infra_Complete-OVERVIEW.md  nxtg-forge_Directory-Structure.md  nxtg-forge_implementation-checklist.md
.asif/dev-work/: 01.04.26
.claude/: forge.config.json  settings.json  state.json  state.json.template
.claude/agents/: agent-forge-builder.md  agent-forge-detective.md  agent-forge-guardian.md  agent-forge-orchestrator.md  agent-forge-planner.md
.claude/checkpoints/: checkpoint-001.json  checkpoint-002.json  latest.json
.claude/commands/: agent-assign.md  checkpoint.md  deploy.md  enable-forge.md  feature.md  gap-analysis.md  init.md  integrate.md  report.md  restore.md  spec.md  status-enhanced.md  status.md  upgrade.md
.claude/hooks/: post-commit.md  post-tool-use.md  pre-commit.md  pre-tool-use.md  session-end.md  session-start.md
.claude/workflows/: code-review.sh  deploy-pipeline.sh  feature-pipeline.sh  tdd-cycle.sh
.github/workflows/: ci.yml
.mcp/: auto-detect.js
docs/: ALIGNMENT-DELIVERABLES.md  API.md  ARCHITECTURAL-REVIEW-2026-01-07.md  ARCHITECTURE.md  CANONICAL-ARCHITECTURE-DIAGRAM.md  CANONICAL-FORGE-VISION-UNIFIED.md  CANONICAL-FORGE-VISION.md  CANONICAL-IMPLEMENTATION-ROADMAP.md  CANONICAL-VISION-INDEX.md  CANONICAL-VISION-SUMMARY.md  CODE-CONSISTENCY-REVIEW.md  CUSTOMIZATION.md  DEPLOYMENT.md  ERROR-HANDLING-AUDIT.md  FORGE-GUIDE.md  GAP-ANALYSIS.md  MIGRATION-GUIDE.md  NXTG-FORGE-V2.0.0-RELEASE-REPORT.md  PHASE-1-2.0-COMPLETE.md  PHASE-1-PROGRESS-REPORT.md  PHASE-2-AUTOMATION-COMPLETE.md  PHASE-2-COMPLETION.md  PHASE-2-QUICK-START.md  PHASE-3-4-IMPLEMENTATION-STATUS.md  PHASE-3-COMPLETION.md  PHASE-3-PARTIAL-COMPLETION-REPORT.md  PHASE-3-PLAN.md  PHASE-4-ERROR-HANDLING-COMPLETE.md  README.md  REFACTORING-COMPLETE.md  REFACTORING-QUICK-START.md  REFACTORING-STATUS-2026-01-08.md  REFACTORING-SUMMARY-2026-01-07.md  STATE-RECOVERY.md  UX-IMPLEMENTATION-2026-01-07.md  UX-REDESIGN-2026-01-07.md  VISION-ALIGNMENT-ACTION-LIST.md  VISION-ALIGNMENT-COMPLETE.md  VISION-ALIGNMENT-EXEC-SUMMARY.md  VISION-ALIGNMENT-REVIEW-ARCHITECT.md  (+2 more)
docs/examples/: example-1_E-Commerce-Platform.md
forge/: __init__.py  cli.py  cli_refactored.py  config.py  config_refactored.py  container.py  container_config.py  directory_manager.py  file_generator.py  gap_analyzer.py  integration.py  mcp_detector.py  result.py  spec_generator.py  state_manager.py  state_manager_refactored.py
forge/agents/: __init__.py  dispatcher.py  orchestrator.py  orchestrator_refactored.py
forge/commands/: __init__.py  base.py  checkpoint_command.py  config_command.py  gap_analysis_command.py  generate_command.py  health_command.py  init_command.py  mcp_command.py  recovery_command.py  restore_command.py  spec_command.py  status_command.py
forge/services/: __init__.py  activity_reporter.py  analytics_service.py  checkpoint_service.py  config_service.py  context_restoration.py  dashboard_service.py  git_automation.py  health_service.py  notification_service.py  project_service.py  quality_alerter.py  quality_monitor.py  recommendation_engine.py  session_reporter.py  status_service.py  work_orchestrator.py
forge/utils/: __init__.py  text_charts.py
nxtg_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: bump-version.sh  install.sh  sync-version.py
tests/: __init__.py  conftest.py  test_cli_refactored.py
tests/integration/: test_phase1_integration.py  test_phase2_automation.py  test_phase3_observability.py
tests/unit/: test_file_generator.py  test_spec_generator.py  test_state_manager.py  test_text_charts.py
(+38 files in other folders)
